service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nlb-service
spec:
  type: ExternalName
  externalName: <nlb-dns-name>
  ports:
    - port: 5673
