ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nlb"
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - path: /users/*
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
